// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag should render correctly in dark 1`] = `
<View
  accessibilityLabel="Primary"
  accessibilityRole="image"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "rgba(10, 132, 255, 1)",
      "borderRadius": 12,
      "height": 24,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 8,
      "textColor": "white",
    }
  }
>
  <Text
    style={
      [
        {
          "color": "white",
          "fontFamily": "SFProText-Regular",
          "fontSize": 14,
          "fontWeight": "bold",
        },
        {
          "color": "white",
        },
        {
          "lineHeight": 21,
        },
      ]
    }
  >
    Primary
  </Text>
</View>
`;

exports[`Tag should render correctly in dark 2`] = `
<View
  accessibilityLabel="Primary"
  accessibilityRole="image"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#B3DAFF",
      "borderRadius": 12,
      "height": 24,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 8,
      "textColor": "rgba(10, 132, 255, 1)",
    }
  }
>
  <Text
    style={
      [
        {
          "color": "white",
          "fontFamily": "SFProText-Regular",
          "fontSize": 14,
          "fontWeight": "bold",
        },
        {
          "color": "rgba(10, 132, 255, 1)",
        },
        {
          "lineHeight": 21,
        },
      ]
    }
  >
    Primary
  </Text>
</View>
`;

exports[`Tag should render correctly in dark with onPress 1`] = `
<View
  accessibilityLabel="Primary"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "rgba(0, 122, 255, 1)",
      "borderRadius": 12,
      "height": 24,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 8,
      "textColor": "white",
    }
  }
>
  <Text
    style={
      [
        {
          "color": "black",
          "fontFamily": "SFProText-Regular",
          "fontSize": 14,
          "fontWeight": "bold",
        },
        {
          "color": "white",
        },
        {
          "lineHeight": 21,
        },
      ]
    }
  >
    Primary
  </Text>
</View>
`;

exports[`Tag should render correctly in dark with onPress 2`] = `
<View
  accessibilityLabel="Primary"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#B3DAFF",
      "borderRadius": 12,
      "height": 24,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 8,
      "textColor": "rgba(0, 122, 255, 1)",
    }
  }
>
  <Text
    style={
      [
        {
          "color": "black",
          "fontFamily": "SFProText-Regular",
          "fontSize": 14,
          "fontWeight": "bold",
        },
        {
          "color": "rgba(0, 122, 255, 1)",
        },
        {
          "lineHeight": 21,
        },
      ]
    }
  >
    Primary
  </Text>
</View>
`;

exports[`Tag should render correctly in light 1`] = `
<View
  accessibilityLabel="Primary"
  accessibilityRole="image"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "rgba(10, 132, 255, 1)",
      "borderRadius": 12,
      "height": 24,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 8,
      "textColor": "white",
    }
  }
>
  <Text
    style={
      [
        {
          "color": "white",
          "fontFamily": "SFProText-Regular",
          "fontSize": 14,
          "fontWeight": "bold",
        },
        {
          "color": "white",
        },
        {
          "lineHeight": 21,
        },
      ]
    }
  >
    Primary
  </Text>
</View>
`;

exports[`Tag should render correctly in light 2`] = `
<View
  accessibilityLabel="Primary"
  accessibilityRole="image"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#B3DAFF",
      "borderRadius": 12,
      "height": 24,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 8,
      "textColor": "rgba(10, 132, 255, 1)",
    }
  }
>
  <Text
    style={
      [
        {
          "color": "white",
          "fontFamily": "SFProText-Regular",
          "fontSize": 14,
          "fontWeight": "bold",
        },
        {
          "color": "rgba(10, 132, 255, 1)",
        },
        {
          "lineHeight": 21,
        },
      ]
    }
  >
    Primary
  </Text>
</View>
`;

exports[`Tag should render correctly in light with onPress 1`] = `
<View
  accessibilityLabel="Primary"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "rgba(0, 122, 255, 1)",
      "borderRadius": 12,
      "height": 24,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 8,
      "textColor": "white",
    }
  }
>
  <Text
    style={
      [
        {
          "color": "black",
          "fontFamily": "SFProText-Regular",
          "fontSize": 14,
          "fontWeight": "bold",
        },
        {
          "color": "white",
        },
        {
          "lineHeight": 21,
        },
      ]
    }
  >
    Primary
  </Text>
</View>
`;

exports[`Tag should render correctly in light with onPress 2`] = `
<View
  accessibilityLabel="Primary"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#B3DAFF",
      "borderRadius": 12,
      "height": 24,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 8,
      "textColor": "rgba(0, 122, 255, 1)",
    }
  }
>
  <Text
    style={
      [
        {
          "color": "black",
          "fontFamily": "SFProText-Regular",
          "fontSize": 14,
          "fontWeight": "bold",
        },
        {
          "color": "rgba(0, 122, 255, 1)",
        },
        {
          "lineHeight": 21,
        },
      ]
    }
  >
    Primary
  </Text>
</View>
`;
